---
source: crates/parsimon-core/src/network/topology.rs
expression: topo.graph
---
nodes:
  - id: 0
    kind: Host
  - id: 1
    kind: Host
  - id: 2
    kind: Switch
node_holes: []
edge_property: directed
edges:
  - - 0
    - 2
    - src: 0
      dst: 2
      bandwidth: 100000000000
      delay: 1000
  - - 2
    - 0
    - src: 2
      dst: 0
      bandwidth: 100000000000
      delay: 1000
  - - 1
    - 2
    - src: 1
      dst: 2
      bandwidth: 100000000000
      delay: 1000
  - - 2
    - 1
    - src: 2
      dst: 1
      bandwidth: 100000000000
      delay: 1000

